fix button alignment

--- a/src/components/Tasks/Tasks.module.css
+++ b/src/components/Tasks/Tasks.module.css
@@ -1,7 +1,7 @@
 .container {
   background-color: #fafafa;
   color: #0a0a0a;
-  width: 500px;
+  width: 600px;
   border-radius: 20px;
   padding: 40px 20px;
 }
@@ -11,7 +11,11 @@
   justify-content: space-between;
 }
 
-.header button {
+.addBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
   width: 40px;
   height: 40px;
   border-radius: 10px;
@@ -31,7 +35,7 @@
   gap: 10px;
   border: 2px solid #e7e5e4;
   border-radius: 10px;
-  padding: 10px;
+  padding: 10px 20px;
 }
 
 .taskInfo {
